build_error.txt
    Checking windows-sys v0.59.0
    Checking muda v0.15.3
    Checking eframe v0.30.0
    Checking tray-icon v0.19.3
    Checking MicMuteRs v0.1.0 (C:\Users\papop\Documents\MicMuteRs)
warning: unused import: `PCWSTR`
 --> src\bin\test_peak.rs:1:29
  |
1 | use windows::core::{Result, PCWSTR};
  |                             ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `eCapture` and `eConsole`
 --> src\bin\test_meter.rs:1:36
  |
1 | use windows::Win32::Media::Audio::{eCapture, eConsole, IMMDeviceEnumerator, MMDeviceEnumerator, IAudioClient, AUDCLNT_SHAREMODE_SHARED};
  |                                    ^^^^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `AUDCLNT_SHAREMODE_SHARED`, `IAudioClient`, and `eCapture`
 --> src\bin\test_direct_mute.rs:1:36
  |
1 | use windows::Win32::Media::Audio::{eCapture, IMMDeviceEnumerator, MMDeviceEnumerator, IAudioClient, AUDCLNT_SHAREMODE_SHARED};
  |                                    ^^^^^^^^                                           ^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `PCWSTR`
 --> src\bin\diagnostics.rs:1:29
  |
1 | use windows::core::{Result, PCWSTR};
  |                             ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `DEVICE_STATE_DISABLED`, `DEVICE_STATE_UNPLUGGED`, and `eConsole`
 --> src\bin\diagnostics.rs:2:55
  |
2 | ...Render, eConsole, IMMDeviceEnumerator, MMDeviceEnumerator, DEVICE_STATE_ACTIVE, DEVICE_STATE_UNPLUGGED, DEVICE_STATE_DISABLED};
  |            ^^^^^^^^                                                                ^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::ffi::c_void`
 --> src\bin\diagnostics.rs:6:5
  |
6 | use std::ffi::c_void;
  |     ^^^^^^^^^^^^^^^^

warning: unused imports: `DEVICE_STATE_ACTIVE`, `eCapture`, and `eRender`
 --> src\bin\test_cx31993.rs:1:36
  |
1 | use windows::Win32::Media::Audio::{eCapture, eRender, IMMDeviceEnumerator, MMDeviceEnumerator, DEVICE_STATE_ACTIVE};
  |                                    ^^^^^^^^  ^^^^^^^                                           ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `STGM_READ`
 --> src\bin\test_cx31993.rs:2:103
  |
2 | use windows::Win32::System::Com::{CoCreateInstance, CoInitializeEx, CLSCTX_ALL, COINIT_MULTITHREADED, STGM_READ};
  |                                                                                                       ^^^^^^^^^

warning: unused variable: `i`
  --> src\bin\test_peak.rs:18:13
   |
18 |         for i in 0..10 {
   |             ^ help: if this is intentional, prefix it with an underscore: `_i`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `i`
  --> src\bin\test_peak.rs:27:13
   |
27 |         for i in 0..10 {
   |             ^ help: if this is intentional, prefix it with an underscore: `_i`

warning: unused import: `std::time::Duration`
 --> src\bin\test_audio_playback.rs:4:5
  |
4 | use std::time::Duration;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `MicMuteRs` (bin "test_meter") generated 1 warning (run `cargo fix --bin "test_meter" -p MicMuteRs` to apply 1 suggestion)
warning: `MicMuteRs` (bin "test_peak") generated 3 warnings (run `cargo fix --bin "test_peak" -p MicMuteRs` to apply 3 suggestions)
warning: `MicMuteRs` (bin "test_direct_mute") generated 1 warning (run `cargo fix --bin "test_direct_mute" -p MicMuteRs` to apply 1 suggestion)
warning: `MicMuteRs` (bin "diagnostics") generated 3 warnings (run `cargo fix --bin "diagnostics" -p MicMuteRs` to apply 3 suggestions)
warning: `MicMuteRs` (bin "test_cx31993") generated 2 warnings (run `cargo fix --bin "test_cx31993" -p MicMuteRs` to apply 2 suggestions)
warning: `MicMuteRs` (bin "test_audio_playback") generated 1 warning (run `cargo fix --bin "test_audio_playback" -p MicMuteRs` to apply 1 suggestion)
error[E0432]: unresolved import `windows_sys::Win32::Graphics::Dwm::MARGINS`
 --> src\gui.rs:8:71
  |
8 | use windows_sys::Win32::Graphics::Dwm::{DwmExtendFrameIntoClientArea, MARGINS};
  |                                                                       ^^^^^^^ no `MARGINS` in `Win32::Graphics::Dwm`

warning: unused import: `eCapture`
 --> src\audio.rs:3:5
  |
3 |     eCapture, eConsole, IMMDevice, IMMDeviceEnumerator, MMDeviceEnumerator, IAudioClient, AUDCLNT_SHAREMODE_SHARED,
  |     ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: mismatched types
   --> src\gui.rs:718:36
    |
718 |                         if hwnd != 0 {
    |                            ----    ^ expected `*mut c_void`, found `usize`
    |                            |
    |                            expected because this is `*mut c_void`
    |
    = note: expected raw pointer `*mut c_void`
                      found type `usize`
help: if you meant to create a null pointer, use `std::ptr::null_mut()`
    |
718 -                         if hwnd != 0 {
718 +                         if hwnd != std::ptr::null_mut() {
    |

warning: unused variable: `arguments`
  --> src\startup.rs:73:9
   |
73 |     let arguments = format!("\"{}\"", exe_str);
   |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_arguments`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0308, E0432.
For more information about an error, try `rustc --explain E0308`.
warning: `MicMuteRs` (bin "MicMuteRs") generated 2 warnings
error: could not compile `MicMuteRs` (bin "MicMuteRs") due to 2 previous errors; 2 warnings emitted
